[package]
name = "reece_concierge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
dotenv = "0.15.0"
home = "0.5.5"
log = "0.4.20"
log4rs = "1.2.0"
serenity = "0.11.6"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
